--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,7 @@
 #container a {
   text-decoration: none;
 }
+
+ion-content {
+  --background: url('../../assets/img/descarga.jpg') no-repeat center center / cover;
+}
